--- a/index.html
+++ b/index.html
@@ -4,10 +4,116 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Olasunkanmi Alade Caleb — Mechanical & Product Design Engineer</title>
+  <meta name="description" content="Portfolio of Olasunkanmi Alade Caleb — Mechanical & Product Design Engineer. Additive & Subtractive Manufacturing, CNC Programming, Project Management." />
+  <style>
+    :root{--bg:#0f1724;--card:#0b1220;--accent:#10b981;--muted:#94a3b8;--glass:rgba(255,255,255,0.03)}
+    *{box-sizing:border-box}
+    body{font-family:Inter,system-ui,Arial,sans-serif;margin:0;background:linear-gradient(180deg,#071025 0%, #071226 60%);color:#e6eef8;line-height:1.5}
+    .container{max-width:980px;margin:48px auto;padding:28px}
+    .card{background:var(--card);border-radius:12px;padding:28px;box-shadow:0 6px 24px rgba(2,6,23,0.6);}
+    header{display:flex;gap:20px;align-items:center}
+    .avatar{width:94px;height:94px;border-radius:12px;background:var(--glass);display:flex;align-items:center;justify-content:center;font-weight:700;font-size:28px;color:var(--accent)}
+    h1{margin:0;font-size:22px}
+    h2{margin:10px 0 8px;font-size:16px;color:#fff}
+    p.lead{margin:4px 0 12px;color:var(--muted)}
+    .row{display:flex;gap:24px;margin-top:18px}
+    .col{flex:1}
+    .skills{display:flex;flex-wrap:wrap;gap:8px}
+    .skill{background:rgba(255,255,255,0.04);padding:6px 10px;border-radius:8px;font-size:13px;color:var(--muted)}
+    .section{margin-top:20px}
+    .project{background:rgba(255,255,255,0.02);padding:12px;border-radius:10px;margin-bottom:10px}
+    a.cta{display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:var(--accent);color:#051018;text-decoration:none;font-weight:600}
+    footer{margin-top:18px;color:var(--muted);font-size:13px}
+    pre.cv-link{background:rgba(255,255,255,0.02);padding:8px;border-radius:8px;overflow:auto}
+    @media(max-width:720px){header{flex-direction:column;align-items:flex-start}.row{flex-direction:column}}
+  </style>
 </head>
 <body>
-  <h1>Portfolio Website</h1>
-  <p>This is the portfolio website file.</p>
+  <div class="container">
+    <div class="card">
+      <header>
+        <div class="avatar">OA</div>
+        <div>
+          <h1>Olasunkanmi Alade Caleb</h1>
+          <p class="lead">Mechanical & Product Design Engineer — Additive & Subtractive Manufacturing • CNC Programming • Technical Project Management</p>
+          <div style="display:flex;gap:12px;flex-wrap:wrap">
+            <a class="cta" href="sandbox:/mnt/data/Olasunkanmi Alade CV.pdf" target="_blank" rel="noopener">Download Résumé (PDF)</a>
+            <a class="cta" href="mailto:olasunkanmi.alade20@gmail.com" style="background:#0284c7;color:#fff">Email Me</a>
+          </div>
+        </div>
+      </header>
+
+      <div class="row">
+        <div class="col">
+          <div class="section">
+            <h2>About</h2>
+            <p>Accomplished Mechanical & Product Design Engineer with 7+ years' experience in mould manufacturing, CNC machining, industrial enclosures, and project leadership. Skilled in SolidWorks, Inventor, AutoCAD, CNC programming, 3D printing, and ERP systems.</p>
+          </div>
+
+          <div class="section">
+            <h2>Highlighted Projects</h2>
+            <div class="project">
+              <strong>Light Tactical Armoured Personnel Carrier (R&amp;D)</strong>
+              <p class="muted">Contributed to design research, fabrication drawings and prototype components.</p>
+            </div>
+            <div class="project">
+              <strong>Industrial Enclosure Systems</strong>
+              <p class="muted">Designed GA drawings, installation guides, BOMs and safety-compliant enclosures.</p>
+            </div>
+            <div class="project">
+              <strong>CNC-Machined Mould Components & Tooling</strong>
+              <p class="muted">Generated CNC programs and created 3D-printed prototypes to validate tooling.</p>
+            </div>
+          </div>
+
+          <div class="section">
+            <h2>Experience (Summary)</h2>
+            <p><strong>Senior Mould Inspector</strong> — Zoujaj Glass (Riyadh, Saudi Arabia), 2024–Present</p>
+            <p><strong>Mechanical Design Engineer (Team Lead)</strong> — Buckler Systems (Lagos), 2023–2024</p>
+            <p><strong>Mechanical Design Engineer</strong> — Tranos Contracting, 2022–2023</p>
+            <p><strong>Mould Maintenance Technician</strong> — Beta Glass Plc, 2018–2022</p>
+          </div>
+
+        </div>
+
+        <div class="col">
+          <div class="section">
+            <h2>Core Skills</h2>
+            <div class="skills">
+              <div class="skill">SolidWorks</div>
+              <div class="skill">AutoCAD</div>
+              <div class="skill">Inventor</div>
+              <div class="skill">CNC Programming</div>
+              <div class="skill">3D Printing (FDM/SLA)</div>
+              <div class="skill">FEA</div>
+              <div class="skill">ERP Systems</div>
+              <div class="skill">BOM Management</div>
+              <div class="skill">Project Management</div>
+            </div>
+          </div>
+
+          <div class="section">
+            <h2>Education & Certifications</h2>
+            <p><strong>HND, Mechanical Engineering</strong> — Yaba College of Technology (2016–2018)</p>
+            <p>Project Management Professional (AAPM) • UK HSE Levels 1–3 • Lean Six Sigma (White Belt)</p>
+          </div>
+
+          <div class="section">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:olasunkanmi.alade20@gmail.com">olasunkanmi.alade20@gmail.com</a></p>
+            <p>Phone: +966 54 5765 637</p>
+            <p>Location: Riyadh, Saudi Arabia</p>
+            <p>GitHub: <a href="https://github.com/olasunkanmi.caleb" target="_blank" rel="noopener">github.com/olasunkanmi.caleb</a></p>
+          </div>
+
+        </div>
+      </div>
+
+      <footer>
+        <small>Built with a simple static template. To publish this as <code>https://olasunkanmi.caleb.github.io</code>, create a repository named <strong>olasunkanmi.caleb.github.io</strong> and upload this file as <code>index.html</code>.</small>
+      </footer>
+    </div>
+  </div>
 </body>
 </html>
 <!-- rebuild -->
