--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <p>Email: <a href="mailto:olasunkanmi.alade20@gmail.com">olasunkanmi.alade20@gmail.com</a></p>
             <p>Phone: +966 54 5765 637</p>
             <p>Location: Riyadh, Saudi Arabia</p>
-            <p>GitHub: <a href="https://github.com/olasunkanmi.caleb" target="_blank" rel="noopener">github.com/olasunkanmi.caleb</a></p>
+            <p>GitHub: <a href="https://github.com/olasunkanmi-caleb" target="_blank" rel="noopener">github.com/olasunkanmi.caleb</a></p>
           </div>
 
         </div>
